<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/header"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="3dp" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/ic_back"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="29dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/person"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.32" />



    <TextView
        android:id="@+id/upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginRight="90dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.291"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/camera"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="@id/upload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.666" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="10dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border"

        android:hint="@string/username"
        android:padding="11dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editText6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border"

        android:hint="@string/Email"
        android:padding="11dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/editText2"
        app:layout_constraintStart_toEndOf="@+id/editText2"
        app:layout_constraintTop_toTopOf="@+id/editText2" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"

        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:padding="11dp"
        app:layout_constraintBottom_toTopOf="@id/editText7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"

        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border"
        android:hint="@string/Confirm"
        android:inputType="textPassword"
        android:padding="11dp"
        app:layout_constraintBottom_toTopOf="@id/editText9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText6" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="115dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border"


        android:hint="@string/Month"
        android:inputType="date"
        android:padding="11dp"
        app:layout_constraintBottom_toBottomOf="@+id/editText9"
        app:layout_constraintEnd_toStartOf="@+id/editText9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText9"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"


        android:background="@drawable/border"
        android:hint="@string/Day"
        android:inputType="date"
        android:padding="11dp"
        android:singleLine="false"
        app:layout_constraintBottom_toTopOf="@id/button"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintLeft_toRightOf="@id/editText8"
        app:layout_constraintRight_toLeftOf="@id/editText10"

        app:layout_constraintTop_toBottomOf="@id/editText7" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"

        android:layout_marginEnd="16dp"
        android:background="@drawable/border"
        android:hint="@string/Year"
        android:inputType="date"
        android:padding="11dp"
        app:layout_constraintBottom_toBottomOf="@+id/editText9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/editText9"
        app:layout_constraintTop_toTopOf="@+id/editText9"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#2D75DF"
        android:text="@string/btnText"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toTopOf="@id/editText3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText9"
        tools:layout_editor_absoluteY="596dp" />

    <TextView
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:inputType="textPersonName"
        android:text="@string/footer"
        android:textColor="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.779" />


</androidx.constraintlayout.widget.ConstraintLayout>